update price filter for Nan type

--- a/pricechecker-frontend/user/compare.html
+++ b/pricechecker-frontend/user/compare.html
@@ -54,98 +54,98 @@
 						<tr >
 							<th class="min-width-200">Product</th>
 							<td id="td-product-compare-amazon">
-								<a href="#" class="product d-block">
-									<div class="product-compare-image">
-										<div class="d-flex mb-3">
-											<img class="img-fluid mx-auto" src="images/iphone_apple/3.png" alt="Image Description">
-										</div>
-									</div>
-									<h3 class="product-item__title text-blue font-weight-bold mb-3">CHUWI heorbook plus 15.6'' window</h3>
-								</a>
-								<div class="text-warning mb-2">
-									<small class="fas fa-star"></small>
-									<small class="fas fa-star"></small>
-									<small class="fas fa-star"></small>
-									<small class="fas fa-star"></small>
-									<small class="fas fa-star"></small>
-								</div>
+								<!--<a href="#" class="product d-block">-->
+									<!--<div class="product-compare-image">-->
+										<!--<div class="d-flex mb-3">-->
+											<!--<img class="img-fluid mx-auto" src="images/iphone_apple/3.png" alt="Image Description">-->
+										<!--</div>-->
+									<!--</div>-->
+									<!--<h3 class="product-item__title text-blue font-weight-bold mb-3">CHUWI heorbook plus 15.6'' window</h3>-->
+								<!--</a>-->
+								<!--<div class="text-warning mb-2">-->
+									<!--<small class="fas fa-star"></small>-->
+									<!--<small class="fas fa-star"></small>-->
+									<!--<small class="fas fa-star"></small>-->
+									<!--<small class="fas fa-star"></small>-->
+									<!--<small class="fas fa-star"></small>-->
+								<!--</div>-->
 							</td>
 							<td id="td-product-compare-ebay">
-								<a href="#" class="product">
-									<div class="product-compare-image">
-										<div class="d-flex mb-3">
-											<img class="img-fluid mx-auto" src="images/iphone_apple/2.png" alt="Image Description">
-										</div>
-									</div>
-									<h3 class="product-item__title text-blue font-weight-bold mb-3">
-										Image Description
-										iPhone 11 cheap phone worth owning
-									</h3>
-								</a>
-								<div class="text-warning mb-2">
-									<small class="fas fa-star"></small>
-									<small class="fas fa-star"></small>
-									<small class="fas fa-star"></small>
-									<small class="fas fa-star"></small>
-									<small class="fas fa-star"></small>
-								</div>
+								<!--<a href="#" class="product">-->
+									<!--<div class="product-compare-image">-->
+										<!--<div class="d-flex mb-3">-->
+											<!--<img class="img-fluid mx-auto" src="images/iphone_apple/2.png" alt="Image Description">-->
+										<!--</div>-->
+									<!--</div>-->
+									<!--<h3 class="product-item__title text-blue font-weight-bold mb-3">-->
+										<!--Image Description-->
+										<!--iPhone 11 cheap phone worth owning-->
+									<!--</h3>-->
+								<!--</a>-->
+								<!--<div class="text-warning mb-2">-->
+									<!--<small class="fas fa-star"></small>-->
+									<!--<small class="fas fa-star"></small>-->
+									<!--<small class="fas fa-star"></small>-->
+									<!--<small class="fas fa-star"></small>-->
+									<!--<small class="fas fa-star"></small>-->
+								<!--</div>-->
 							</td>
                             <td id="td-product-compare-walmart">
-                                <a href="#" class="product d-block">
-                                    <div class="product-compare-image">
-                                        <div class="d-flex mb-3">
-                                            <img class="img-fluid mx-auto" src="images/iphone_apple/1.png" alt="Image Description">
-                                        </div>
-                                    </div>
-                                    <h3 class="product-item__title text-blue font-weight-bold mb-3">iPhone 11 Pro International 64GB</h3>
-                                </a>
-                                <div class="text-warning mb-2">
-                                    <small class="fas fa-star"></small>
-                                    <small class="fas fa-star"></small>
-                                    <small class="fas fa-star"></small>
-                                    <small class="fas fa-star"></small>
-                                    <small class="fas fa-star"></small>
-                                </div>
+                                <!--<a href="#" class="product d-block">-->
+                                    <!--<div class="product-compare-image">-->
+                                        <!--<div class="d-flex mb-3">-->
+                                            <!--<img class="img-fluid mx-auto" src="images/iphone_apple/1.png" alt="Image Description">-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                    <!--<h3 class="product-item__title text-blue font-weight-bold mb-3">iPhone 11 Pro International 64GB</h3>-->
+                                <!--</a>-->
+                                <!--<div class="text-warning mb-2">-->
+                                    <!--<small class="fas fa-star"></small>-->
+                                    <!--<small class="fas fa-star"></small>-->
+                                    <!--<small class="fas fa-star"></small>-->
+                                    <!--<small class="fas fa-star"></small>-->
+                                    <!--<small class="fas fa-star"></small>-->
+                                <!--</div>-->
                             </td>
 						</tr>
 						<tr id="tr-price-compare">
 							<th>Price</th>
 							<td id="td-price-compare-amazon">
-								<div class="product-price">$250.00</div>
+								<!--<div class="product-price">$250.00</div>-->
 							</td>
 							<td id="td-price-compare-ebay">
-								<div class="product-price">$248.99</div>
+								<!--<div class="product-price">$248.99</div>-->
 							</td>
                             <td id="td-price-compare-walmart">
-                                <div class="product-price">$248.99</div>
+                                <!--<div class="product-price">$248.99</div>-->
                             </td>
 						</tr>
 						<tr>
 							<th>Description</th>
 							<td id="td-description-compare-amazon">
-								<ul>
-									<li><span class="">Intel Core i5 processors (13-inch model)</span></li>
-									<li><span class="">Intel Iris Graphics 6100 (13-inch model)</span></li>
-									<li><span class="">Flash storage</span></li>
-									<li><span class="">Up to 10 hours of battery life2 (13-inch model)</span></li>
-									<li><span class="">Force Touch trackpad (13-inch model)</span></li>
-								</ul>
+								<!--<ul>-->
+									<!--<li><span class="">Intel Core i5 processors (13-inch model)</span></li>-->
+									<!--<li><span class="">Intel Iris Graphics 6100 (13-inch model)</span></li>-->
+									<!--<li><span class="">Flash storage</span></li>-->
+									<!--<li><span class="">Up to 10 hours of battery life2 (13-inch model)</span></li>-->
+									<!--<li><span class="">Force Touch trackpad (13-inch model)</span></li>-->
+								<!--</ul>-->
 							</td>
 							<td id="td-description-compare-ebay">
-								<ul>
-									<li><span class="">Pair and Play with your Bluetooth® device with 30' range</span></li>
-									<li><span class="">12 hour rechargeable battery with Fuel Gauge</span></li>
-									<li><span class="">Take hands-free calls with built-in mic*</span></li>
-									<li><span class="">Fine-tuned acoustics for clarity, breadth and balance</span></li>
-								</ul>
+								<!--<ul>-->
+									<!--<li><span class="">Pair and Play with your Bluetooth® device with 30' range</span></li>-->
+									<!--<li><span class="">12 hour rechargeable battery with Fuel Gauge</span></li>-->
+									<!--<li><span class="">Take hands-free calls with built-in mic*</span></li>-->
+									<!--<li><span class="">Fine-tuned acoustics for clarity, breadth and balance</span></li>-->
+								<!--</ul>-->
 							</td>
                             <td id="td-description-compare-walmart">
-                                <ul>
-                                    <li><span class="">Pair and Play with your Bluetooth® device with 30' range</span></li>
-                                    <li><span class="">12 hour rechargeable battery with Fuel Gauge</span></li>
-                                    <li><span class="">Take hands-free calls with built-in mic*</span></li>
-                                    <li><span class="">Fine-tuned acoustics for clarity, breadth and balance</span></li>
-                                </ul>
+                                <!--<ul>-->
+                                    <!--<li><span class="">Pair and Play with your Bluetooth® device with 30' range</span></li>-->
+                                    <!--<li><span class="">12 hour rechargeable battery with Fuel Gauge</span></li>-->
+                                    <!--<li><span class="">Take hands-free calls with built-in mic*</span></li>-->
+                                    <!--<li><span class="">Fine-tuned acoustics for clarity, breadth and balance</span></li>-->
+                                <!--</ul>-->
                             </td>
 						</tr>
 						</tbody>
