--- a/pricechecker-frontend/user/index.html
+++ b/pricechecker-frontend/user/index.html
@@ -48,7 +48,7 @@
     <!-- Slider Section -->
     <div class="mb-4">
         <div class="bg-img-hero">
-            <s class="container min-height-438 overflow-hidden">
+            <div class="container min-height-438 overflow-hidden">
                 <!--
                 <div class="bg-img-hero" style="background-image: url(images/img2.jpg);">
                     <div class="container min-height-438 overflow-hidden">
@@ -194,7 +194,7 @@
 
                     </div>
                 </section>
-            </s>
+            </div>
         </div>
     </div>
     <!-- End Slider Section -->
