update carosel image size

--- a/pricechecker-frontend/user/index.html
+++ b/pricechecker-frontend/user/index.html
@@ -169,22 +169,25 @@
 
                         </div>
 
-                        <div class="carousel-inner" style="height: 400px;">
-                            <div class="carousel-item active" style="background-image: url(images/carousel/carousel2.png);background-size: cover;">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                               <img src="images/carousel/carousel2.png" height="438px" width="100%">
                                 <div class="container">
                                     <!--<h2>The best iphone with best price</h2>-->
                                     <!--<p>Iphone</p>-->
                                 </div>
                             </div>
 
-                            <div class="carousel-item" style="background-image: url(images/carousel/carousel5.png);">
+                            <div class="carousel-item">
+                                <img src="images/carousel/carousel5.png" height="438px" width="100%">
                                 <div class="container">
                                     <!--<h2>The best laptop with best price</h2>-->
                                     <!--<p>Laptop</p>-->
                                 </div>
                             </div>
 
-                            <div class="carousel-item" style="background-image: url(images/carousel/carousel7.png);">
+                            <div class="carousel-item">
+                                <img src="images/carousel/carousel7.png" height="438px" width="100%">
                                 <div class="container">
                                     <!--<h2>The best TV with best price</h2>-->
                                     <!--<p>TV</p>-->
